# study-aid

./: .gitignore  README.md  config.py  destructive_cleanup.py  exam-1761391840.txt  flow_diagram.txt  log-1761391840.txt  main.py  pyproject.toml  raghelper.py  set_exam.py  show_exam.py  todo.txt  traverse_directory.py
chroma-data/: chroma.sqlite3
